chore(vercel): add SPA rewrites to serve client routes like /vistoria-mobile/*

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,8 @@
   "env": {
     "VITE_CONVEX_URL": "https://avid-jackal-629.convex.cloud",
     "CONVEX_DEPLOYMENT": "avid-jackal-629"
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
